hphp/hack/test/typecheck/reactive/reactive_inc_dec.php.exp
File "reactive_inc_dec.php", line 6, characters 3-9:
This object's property is being mutated (used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
File "reactive_inc_dec.php", line 7, characters 5-11:
This object's property is being mutated (used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
File "reactive_inc_dec.php", line 8, characters 3-9:
This object's property is being mutated (used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
File "reactive_inc_dec.php", line 9, characters 5-11:
This object's property is being mutated (used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
